fixed spacing, added gradient to hp image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,10 +41,9 @@ body {
 
 /* ----- HOME PAGE ----- */
 .home {
-
-  background: url('/assets/venice.jpg') no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/assets/venice.jpg') no-repeat center center;
   background-size: cover;
-  height: 800px;;
+  height: 800px;
 }
 
 .home h2 {
